--- a/html/style.css
+++ b/html/style.css
@@ -40,6 +40,7 @@ h2 {
     font-weight: normal;
     font-size: 23px;
     margin-top: 30px;
+    clear: both;
 }
 
 h3 {
@@ -68,4 +69,28 @@ a {
 a:hover {
     background-color: #000;
     color: #fff;
+}
+
+img {
+    max-height: 150px;
+}
+
+header + ul {
+    list-style: none outside none;
+    font-size: 18px;
+    border-left: 2px solid black;
+    float: right;
+    margin-left: 20px;
+    padding-left: 20px;
+}
+
+h1 {
+    margin-top: 7px;
+    margin-bottom: 20px;
+    font-size: 30px;
+}
+
+header {
+    display: inline;
+    float: left;
 }
